--- a/LabMaterials.csproj
+++ b/LabMaterials.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <Compile Remove="Pages\Login.cshtml.cs" />
+    <Compile Remove="Pages\Requests - Copy.cshtml.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Remove="Pages\Login.cshtml" />
+    <Content Remove="Pages\Requests - Copy.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
