--- a/LabMaterials.csproj
+++ b/LabMaterials.csproj
@@ -37,4 +37,8 @@
     <PackageReference Include="ztools.CoreLib" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\returnrequests\" />
+  </ItemGroup>
+
 </Project>
